fixed padding for one line quotes image spilling over container

--- a/public_html/layout/nouveau/style.css
+++ b/public_html/layout/nouveau/style.css
@@ -1924,12 +1924,13 @@ border:1px solid #8394B2;
 border-left:5px solid #8394B2;
 color:#465584;
 margin:5px auto 8px;
+min-height:25px;
 padding:4px;
 }
 
 .quotemain img {
 float:right;
-padding:5px;
+padding-left:5px;
 }
 
 div .php {
